syntax = "proto3";

option go_package = "github.com/tubagusmf/ecommerce-user-product-service/pb/order";

package order;

import "google/protobuf/timestamp.proto";

message Order {
    string order_id = 1;
    int64 user_id = 2;
    repeated OrderItem items = 3;
    double total_amount = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}

message OrderItem {
    int64 product_id = 1;
    int64 quantity = 2;
    double price = 3;
}

message CreateOrderRequest {
    int64 user_id = 1;
    repeated OrderItem items = 2;
}

message CreateOrderResponse {
    Order order = 1;
}

message GetOrderRequest {
    string order_id = 1;
}

message GetOrderResponse {
    Order order = 1;
}

message MarkOrderPaidRequest {
    string order_id = 1;
}

message MarkOrderPaidResponse {
    bool success = 1;
}

message ListOrdersRequest {
    string order_id = 1;
    int64 user_id = 2;
}

message ListOrdersResponse {
    repeated Order orders = 1;
}

service OrderService {
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
    rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
    rpc MarkOrderPaid(MarkOrderPaidRequest) returns (MarkOrderPaidResponse);
    rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse);
}